[tool.poetry]
name = "mac_lookup"
version = "0.0.9"
description = "Simple script to query for MAC address vendor info"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
